# notebooks

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
exercises/fpp3/: 02_time_series_graphics.ipynb  README.md
exercises/fpp3/data/: 640101.xlsx  8635010.xlsx  GOOGL.csv  US_employment_fpp3_Monthly.txt  aus-production.csv  egg_prices.csv  global_economy_data.csv  us_retail_employment.csv  uschange_fpp3_Monthly.txt  uschange_fpp3_Quarterly.txt
experiments/ts-features/: spectral-entropy-finance.ipynb  spectral-entropy.ipynb
src/util/: finance.py  ts.py
